# SFMLGame

./: .gitignore  CMakeLists.txt  README.md  bootstrap.bat  vcpkg.json
proto/: chain.proto
src/: character.cpp  character.h  client.cpp  client.h  game.cpp  game.h  render.cpp  render.h  server.cpp  server.h
